<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:backgroundTint="@color/grey"
    android:background="@drawable/bottom_sheet_top_curve"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/thumbnailImg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="3dp"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/downloadBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/selected_tab"
        android:layout_margin="5dp"
        android:text="@string/_1080p" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/downloadBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/selected_tab"
        android:layout_weight="1"
        android:text="@string/_720p" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/downloadBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/selected_tab"
        android:layout_weight="1"
        android:text="@string/_360p" />

    </LinearLayout>

</LinearLayout>