<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".YoutubeActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:layout_margin="20dp"/>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:src="@drawable/icons8_youtube" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/youtube"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayout">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/youtube_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url_here" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_below="@+id/input"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/downloadBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/selected_tab"
                android:text="@string/download"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pasteBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:background="@drawable/selected_tab"
                android:layout_marginStart="8dp"
                android:text="@string/paste"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>